xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__xpath_ge.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"1 >= 2\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(Expr(Expr([
      Binary(BinaryExpr(
        operator: GenGe,
        left: PathExpr(
          steps: [
            PrimaryExpr(Literal(Integer((Positive, [
              1,
            ])))),
          ],
        ),
        right: PathExpr(
          steps: [
            PrimaryExpr(Literal(Integer((Positive, [
              2,
            ])))),
          ],
        ),
      )),
    ]))),
  ],
)))
