xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__xpath_multi_expr.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_xpath_simple(\"1 + 2, 3 + 4\")"
---
Ok(XPath(Expr([
  Path(PathExpr(
    steps: [
      PrimaryExpr(Expr(Expr([
        Binary(BinaryExpr(
          operator: Add,
          left: PathExpr(
            steps: [
              PrimaryExpr(Literal(Integer((Positive, [
                1,
              ])))),
            ],
          ),
          right: PathExpr(
            steps: [
              PrimaryExpr(Literal(Integer((Positive, [
                2,
              ])))),
            ],
          ),
        )),
      ]))),
    ],
  )),
  Path(PathExpr(
    steps: [
      PrimaryExpr(Expr(Expr([
        Binary(BinaryExpr(
          operator: Add,
          left: PathExpr(
            steps: [
              PrimaryExpr(Literal(Integer((Positive, [
                3,
              ])))),
            ],
          ),
          right: PathExpr(
            steps: [
              PrimaryExpr(Literal(Integer((Positive, [
                4,
              ])))),
            ],
          ),
        )),
      ]))),
    ],
  )),
])))
