xee-xpath-ast/src/ast/snapshots/xee_xpath_ast__ast__parse3__tests__xpath_parse_error.snap
---
source: xee-xpath-ast/src/ast/parse3.rs
expression: "parse_expr_single(\"1 + 2 +\")"
---
Err("[found \'Plus\' at 6..7 expected \'LeftBracket\', \'LeftParen\', \'Slash\', \'DoubleSlash\', \'ExclamationMark\', \'Cast\', \'Castable\', \'Treat\', \'Instance\', \'Intersect\', \'Except\', \'Pipe\', \'Union\', \'Asterisk\', \'Div\', \'Idiv\', \'Mod\', \'Minus\', \'Plus\', \'Dollar\', \'Dot\', \'Function\', \'Parent\', \'Ancestor\', \'PrecedingSibling\', \'Preceding\', \'AncestorOrSelf\', \'DotDot\', \'Child\', \'Descendant\', \'Attribute\', \'Self_\', \'DescendantOrSelf\', \'FollowingSibling\', \'Following\', \'Namespace\', \'At\', \'AsteriskColon\', \'DocumentNode\', \'Element\', \'SchemaElement\', \'SchemaAttribute\', \'ProcessingInstruction\', \'Comment\', \'Text\', \'NamespaceNode\', \'Node\', \'To\', \'DoublePipe\', \'Equal\', \'NotEqual\', \'LessThan\', \'LessThanEqual\', \'GreaterThan\', \'GreaterThanEqual\', \'Eq\', \'Ne\', \'Lt\', \'Le\', \'Gt\', \'Ge\', \'Is\', \'Precedes\', \'Follows\', \'And\', or \'Or\']")
